app/src/main/java/sdk/api/development/examples/festivo_api/errors/AuthorizationError.java
package sdk.api.development.examples.festivo_api.errors;

public class AuthorizationError extends RuntimeException {
    
}
